WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85932
Can't scroll PDF in subframe
https://bugs.webkit.org/show_bug.cgi?id=85932
Summary
Can't scroll PDF in subframe
Anders Carlsson
Reported
2012-05-08 17:19:13 PDT
Can't scroll PDF in subframe
Attachments
Patch
(3.39 KB, patch)
2012-05-08 17:20 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-05-08 17:20:19 PDT
Created
attachment 140824
[details]
Patch
Anders Carlsson
Comment 2
2012-05-08 17:23:23 PDT
Committed
r116469
: <
http://trac.webkit.org/changeset/116469
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug