Can't scroll PDF in subframe https://bugs.webkit.org/show_bug.cgi?id=85932 <rdar://problem/11405527>

Reviewed by Sam Weinig.

* WebProcess/Plugins/PDF/BuiltInPDFView.h:
* WebProcess/Plugins/PDF/BuiltInPDFView.mm:
(WebKit::BuiltInPDFView::updateScrollbars):
Trigger a layout when scrollbars come and go so the non fast scrollable region gets recomputed.

(WebKit::BuiltInPDFView::scrollableAreaBoundingBox):
Implement this by calling out to the PluginView.

Canonical link: https://commits.webkit.org/103518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116469 268f45cc-cd09-0410-ab3c-d52691b4dbfc